# balabit-os-7-linuxinfo

./: CREDITS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  linuxinfo_alpha.c  linuxinfo_arm.c  linuxinfo_avr.c  linuxinfo_common.c  linuxinfo_hppa.c  linuxinfo_ia64.c  linuxinfo_intel.c  linuxinfo_m68k.c  linuxinfo_mips.c  linuxinfo_ppc.c  linuxinfo_s390.c  linuxinfo_sh.c  linuxinfo_sparc.c
debian/: NEWS  changelog  control  copyright
po/: LINGUAS  cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  linuxinfo.pot  pl.po  pt.po  ru.po
po4a/: Makefile.am  Makefile.in  po4a.cfg
